--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "subdomain": "revealjs",
   "main": "js/reveal.js",
   "scripts": {
-    "test": "grunt test",
-    "start": "grunt serve",
+    "test": "./node_modules/.bin/grunt test",
+    "serve": "./node_modules/.bin/grunt serve",
+
+    "start": "./node_modules/.bin/grunt serve",
     "build": "grunt"
   },
   "author": {
